fixed alignment of description in table

--- a/OnlineStore/wwwroot/css/site.css
+++ b/OnlineStore/wwwroot/css/site.css
@@ -528,7 +528,6 @@ a.link-hover:hover {
 
 .tableDescription {
     max-width: 900px;
-    display: inline-block;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
